--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,10 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="theme_primary">#E91E63</color>
+    <color name="theme_primary_dark">#AD1457</color>
+    <color name="theme_accent">#3F51B5</color>
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="app_primary">#E91E63</color>
+    <color name="app_primary_pressed">#D81B60</color>
 </resources>
