--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -1,27 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?><!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:orientation="vertical">-->
-
-<!--<android.support.v4.widget.SwipeRefreshLayout--><!--android:id="@+id/swipe_refresh_layout"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->
-
-<!--<android.support.v7.widget.RecyclerView--><!--android:id="@+id/recycler_view"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:clipToPadding="false"--><!--android:scrollbarStyle="outsideOverlay"--><!--android:paddingTop="116dp"--><!--android:paddingLeft="@dimen/list_side_margin"--><!--android:paddingRight="@dimen/list_side_margin"--><!--android:paddingBottom="28dp" />--><!--</android.support.v4.widget.SwipeRefreshLayout>-->
-
-<!--<FrameLayout--><!--android:id="@+id/toolbar_container"--><!--android:layout_width="match_parent"--><!--android:layout_height="112dp"--><!--android:background="?colorPrimary"--><!--android:elevation="8dp">-->
-
-<!--<android.support.v7.widget.Toolbar--><!--android:id="@+id/toolbar"--><!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"--><!--android:layout_marginLeft="@dimen/list_toolbar_side_margin"--><!--android:layout_marginRight="@dimen/list_toolbar_side_margin"--><!--android:layout_width="match_parent"--><!--android:layout_height="?actionBarSize"--><!--android:layout_gravity="bottom">-->
-
-<!--<ImageView--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:src="@drawable/logo"--><!--android:contentDescription="@string/app_name" />-->
-
-<!--</android.support.v7.widget.Toolbar>--><!--</FrameLayout>-->
-
-<!--</FrameLayout>-->
-
-
+<?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
@@ -89,19 +72,13 @@
         android:layout_gravity="bottom|right|end"
         android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
-        android:backgroundTint="@color/theme_accent"
         android:elevation="6dp"
         android:scaleType="center"
         android:src="@drawable/ic_add"
         android:tint="@color/ltgray"
-        app:fab_label="Help"
-        app:fab_shadowColor="#66000000"
-        app:fab_shadowRadius="4dp"
-        app:fab_shadowXOffset="1dp"
-        app:fab_shadowYOffset="3dp"
-        app:fab_size="normal"
-        app:layout_behavior="com.example.xyzreader.ui.fabScrollMonitor"
+        fab:backgroundTint="@color/theme_accent"
+        fab:fabSize="normal"
+        fab:layout_behavior="com.example.xyzreader.ui.fabScrollMonitor"
         fab:rippleColor="@color/ltgray" />
-
 </android.support.design.widget.CoordinatorLayout>
 
