--- a/XYZReader/src/main/res/values-v21/styles.xml
+++ b/XYZReader/src/main/res/values-v21/styles.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Bacon.Detail">
-        <item name="android:statusBarColor">@android:color/transparent</item>
-    </style>
- 
+        <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+                <!-- Main theme colors -->
+                <!--   your app branding color for the app bar -->
+                <item name="android:colorPrimary">@color/theme_primary</item>
+                <!--   darker variant for the status bar and contextual app bars -->
+                <item name="android:colorPrimaryDark">@color/theme_primary_dark</item>
+                <!--   theme UI controls like checkboxes and text fields -->
+                <item name="android:colorAccent">@color/theme_accent</item>
+                <item name="android:navigationBarColor">@color/theme_primary_dark</item>
+        </style>
+
+
 </resources>
