--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -21,19 +21,23 @@
 
     </style>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar" tools:targetApi="lollipop">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Main theme colors -->
         <!--   your app branding color for the app bar -->
-        <item name="android:colorPrimary">@color/theme_primary</item>
+        <item name="android:colorPrimary" tools:targetApi="lollipop">@color/theme_primary</item>
         <!--   darker variant for the status bar and contextual app bars -->
-        <item name="android:colorPrimaryDark">@color/theme_primary_dark</item>
+        <item name="android:colorPrimaryDark" tools:targetApi="lollipop">@color/theme_primary_dark
+        </item>
         <!--   theme UI controls like checkboxes and text fields -->
-        <item name="android:colorAccent">@color/theme_accent</item>
-        <item name="android:navigationBarColor">@color/theme_primary_dark</item>
+        <item name="android:colorAccent" tools:targetApi="lollipop">@color/theme_accent</item>
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">
+            @color/theme_primary_dark
+        </item>
     </style>
 
     <style name="Theme.Bacon.Detail">
-        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">@android:color/transparent
+        </item>
     </style>
 
 </resources>
